--- a/backend/package.json
+++ b/backend/package.json
@@ -16,4 +16,10 @@
     "mongoose": "^8.10.1",
     "socket.io": "^4.8.1"
   }
+  {
+    "scripts": {
+      "start": "node server.js",
+      "dev": "nodemon server.js"
+    }
+  }
 }
