--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +19,5 @@
     "mongoose": "^8.10.1",
     "socket.io": "^4.8.1"
   }
-  {
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    }
-  }
+  
 }
